--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <img class="card-header" src="images/bg-pattern-card.svg" alt="">
 
     <div class="card-content">
-      <p>Victor Crest 26</p>
-      <p>London</p>
+      <p><span class="name">Victor Crest&nbsp;</span>&nbsp;26</p>
+      <p class="city">London</p>
     </div>
 
     <img class="avatar" src="images/image-victor.jpg" alt="">
