--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
+  <img src="./images/bg-pattern-top.svg" class="pattern-top" alt=""/>
+  <img src="./images/bg-pattern-bottom.svg" class="pattern-bottom" alt=""/>
+
   <div class="card">
     <img class="card-header" src="images/bg-pattern-card.svg" alt="">
 
