--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Salvatore Sammarco</a>.
+    Coded by <a href="https://github.com/microjumper">Salvatore Sammarco</a>.
   </div>
 </footer>
 </html>
